packages/k8s/base/frontend/web.yml
# DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          resources: {}
          image: ghcr.io/crate-network/web:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
---
# SERVICE SETUP
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
