packages/k8s/base/frontend/ingress.yml
# INGRESS SETUP
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crate-web-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - crate.network
      secretName: crate-tls
  rules:
    - host: crate.network
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web
                port:
                  number: 80
